# bin2c

./: CMakeLists.txt  license.txt  readme.md
bin2c/: CMakeLists.txt  main.c
bin2h/: CMakeLists.txt  main.c
